Created HTML structure of highlight section

--- a/index.html
+++ b/index.html
@@ -6,5 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
+    <h1>Assistência médica simplificada para todos</h1>
+    <p>
+      Os médicos da DoctorCare vão além dos sintomas para tratar a causa raiz de
+      sua doença e proporcionar uma cura a longo prazo.
+    </p>
+    <button>
+      <img src="./assets/whatsapp.svg" alt="Logo do WhatsApp" />
+      AGENDE SUA CONSULTA
+    </button>
+    <img
+      src="./assets/mulher-negra.png"
+      alt="Mulher negra vestindo moleton verde e sorrindo"
+    />
+    <h3>+3.500</h3>
+    <p>Pacientes atendidos</p>
+    <h3>+15</h3>
+    <p>Especialistas disponíveis</p>
+    <h3>+10</h3>
+    <p>Anos no mercado</p>
+  </body>
 </html>
