--- a/index.html
+++ b/index.html
@@ -13,25 +13,39 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
-    <h1>Assistência médica simplificada para todos</h1>
-    <p>
-      Os médicos da DoctorCare vão além dos sintomas para tratar a causa raiz de
-      sua doença e proporcionar uma cura a longo prazo.
-    </p>
-    <button>
-      <img src="./assets/whatsapp.svg" alt="Logo do WhatsApp" />
-      AGENDE SUA CONSULTA
-    </button>
-    <img
-      src="./assets/mulher-negra.png"
-      alt="Mulher negra vestindo moleton verde e sorrindo"
-    />
-    <h3>+3.500</h3>
-    <p>Pacientes atendidos</p>
-    <h3>+15</h3>
-    <p>Especialistas disponíveis</p>
-    <h3>+10</h3>
-    <p>Anos no mercado</p>
+    <header>
+      <h4>BOAS-VINDAS A DOCTORCARE 👋</h4>
+      <h1>Assistência médica simplificada para todos</h1>
+      <p>
+        Os médicos da DoctorCare vão além dos sintomas para tratar a causa raiz
+        de sua doença e proporcionar uma cura a longo prazo.
+      </p>
+      <button>
+        <img src="./assets/whatsapp.svg" alt="Logo do WhatsApp" />
+        AGENDE SUA CONSULTA
+      </button>
+      <img
+        class="woman"
+        src="./assets/mulher_negra.png"
+        alt="Mulher negra vestindo moleton verde e sorrindo"
+      />
+
+      <div class="stats">
+        <div class="stat">
+          <h3>+3.500</h3>
+          <p>Pacientes atendidos</p>
+        </div>
+
+        <div class="stat">
+          <h3>+15</h3>
+          <p>Especialistas disponíveis</p>
+        </div>
+
+        <div class="stat">
+          <h3>+10</h3>
+          <p>Anos no mercado</p>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
